\name{NEWS}
\title{NEWS file for the haplo.stats package}
\section{Changes in version 1.7.7}{
  \itemize{
    \item Make test.haplo.em robust to system char/int recoding
    \item Add all.y=TRUE in merge in haplo.group so colSums of group
    haplotypes sum to 1. Creates NAs in pooled frequencies because some
    haplotypes only estimated within groups.
    \item The change above changes haplo.score.merge and haplo.cc
    results with more haplotypes
  }
}
\section{Changes in version 1.7.3}{
  \itemize{
    \item Remove special characters in comments in R code
    \item Replace S.h with R.h per note from Prof Ripley 1/27/2016
    \item Vignette manualHaploStats available as pre-made pdf, with R.rsp
    \item Ensure summary.haplo.em prints haplotypes in alpha-numeric
    order of the haplotypes and row names are 1:nrow
  }
}
\section{Changes in version 1.6.0}{
  \itemize{
    \item Removed .First.lib and .Last.lib b/c handled via namespace
    \item Updated test scripts to set LC_COLLATE and check values after set
  }
}
\section{Changes in version 1.5.6}{
  \itemize{
    \item Removed glm.fit.nowarn because glm.fit changed from R 2.15.0
    \item Added haplo.binomial for family=binomial in haplo.glm. Will
    work with either, and within haplo.glm it uses the initialize
    expression for haplo.binomial to ignore warnings of non-integer
    number of successes because we use posterior probability of a
    haplotype pair per subject as weights
  }
}
\section{Changes in version 1.5.4}{
  \itemize{
    \item Fixed haplo.glm bug in assigning names to var.mat when
    haplo.elim=NA
    \item replaced printf statements with REprintf (from R_ext/Print.h)
    in verbose C code sections
    \item Placed raw manual in rnw directory at top level, as suggested
    by Andreas Tille (2/11/2012)
  }
}
\section{Changes in version 1.5.2}{
  \itemize{
    \item Added methods for haplo.glm object: anova, residuals,
    vcov, fitted