@@ -1,5 +1,5 @@
-a56fde374a23fde374e8aa2cb4fe7c52 *DESCRIPTION
-cc6735f8676368025526d36674d55a22 *NAMESPACE
+e1e837d16523c49aebb3277053c03733 *DESCRIPTION
+33d6e56eaeca6f99c30e7c724ac3f9ed *NAMESPACE
 7400078d1007c803b9974870d9609cc0 *R/Ginv.R
 dd3dbda43c57931ca381e580f02bcdca *R/anova.haplo.glm.q
 d50dcb451639ac60dd7c19fac6b7f47d *R/chisq.power.q
@@ -55,7 +55,7 @@ b9fc42decbdc15f11b09211654255fd7 *R/print.haplo.em.q
 b9d82ad608c6eb8dcb8633f0c8af25d9 *R/residScaledGlmFit.q
 5738ece8b58516a5d5f34a8f056db65c *R/residuals.haplo.glm.q
 98d88cfd05e9d7e7f661d9c736450368 *R/score.sim.control.q
-a8c35b8fe35aee47209ade1d9f7b9d91 *R/seqhap.q
+07d8549254c0c1f63e92f56c7744dcf4 *R/seqhap.q
 903731c4ba7cb00fa6256eb3d540f390 *R/setupGeno.q
 73101e9b3c26a240b9216a73d9344dd2 *R/summary.haplo.em.q
 38967fbc973e5a3a06848d8d52cc5824 *R/summary.haplo.glm.q
@@ -63,15 +63,15 @@ a8c35b8fe35aee47209ade1d9f7b9d91 *R/seqhap.q
 1248bf03ef39261e6a9eeb641acbaa42 *R/varfunc.glm.fit.q
 a030452a0250f7d1003029e33aed5813 *R/x.sexcheck.q
 118ae8ba1c9a51017cd121ac33606ac6 *R/zzz.haplo.stats.R
-7a57a0991195ba48c8ca25a334135fec *build/vignette.rds
+8edf67b8dc5ec94ea6d56e64a776f352 *build/vignette.rds
 4eed20f1d136a50e9996fb5802b0ca28 *data/hapPower.demo.tab.gz
 b395516007295803e95e4951b0066373 *data/hla.demo.tab.gz
 57ef4a88591f0afdc4c9cfb4421c83eb *data/seqhap.dat.tab.gz
 a7ee89da0aff191a340c312643f7cd73 *data/seqhap.pos.tab.gz
 27bf59c2a37bff07a78c9730061e532b *inst/LICENSE.note
-af25d04d35b06c8ce6fc37d7d9b320b1 *inst/NEWS.Rd
+3be71c07b11ecfcba11369c1b60b06a6 *inst/NEWS.Rd
 d368405f1c604912f51ba286eed9944a *inst/doc/GPL.txt
-5fba89fa8eb4af4569e969c7cdaccc78 *inst/doc/manualHaploStats.pdf
+337f8d8d914d57e4650059e5e45d729a *inst/doc/manualHaploStats.pdf
 2413e1f391f3cee0b780a174df883c95 *inst/doc/manualHaploStats.pdf.asis
 10ae00dab9c8f986bf5b6c64eef98521 *man/Ginv.Rd
 bf6f1a85454445157ab798632128e8ab *man/anova.haplo.glm.Rd
@@ -127,10 +127,11 @@ d1cfb119490d981c6a87139f300a2e64 *man/summary.haplo.em.Rd
 5a7526093b42563decf4be82a0e9d14a *man/vcov.haplo.glm.Rd
 03e1d61ee4c2c81c306a08fa00f86e92 *man/x.sexcheck.Rd
 13955bba60467a8f8bb9ae0ace29f3e4 *src/groupsum.c
+66db9d129ba489b97d3c0fb81cd7ea29 *src/haplo.stats_init.c
 e65fb3a41dda5bad22a4eca7e3768330 *src/haplo_em_pin.c
 55c60fb632f1f32c26c983f1c78f7baf *src/haplo_em_pin.h
 77b64793b5317368e476ba0b17459884 *src/louis_info.c
-240de50199d7ece7922ef182af153206 *src/seqhap.c
+0f2bd7386b20d6803eed83e0b163a844 *src/seqhap.c
 6f59f054e8161ced7c337e71e5ce7aaf *tests/dump.varx.s
 6151dce21da5657935a969fb8a6e29f5 *tests/snap.sim.phased.dat
 745e6db55d61c53aa80feb1e7ee69d85 *tests/snapData.csv
